--- a/index.html
+++ b/index.html
@@ -212,22 +212,22 @@
 				<div class="row-no-gutters social text-center">
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" href="index.html"><span class="fa fa-twitter"></span></a>
+							<a class="social" href="https://twitter.com/"><span class="fa fa-twitter"></span></a>
 						</div>
 					</div>
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" href="index.html"><span class="fa fa-facebook"></span></a>
+							<a class="social" href="https://www.facebook.com/"><span class="fa fa-facebook"></span></a>
 						</div>
 					</div>
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" href="index.html"><span class="fa fa-dribbble"></span></a>
+							<a class="social" href="https://dribbble.com/"><span class="fa fa-dribbble"></span></a>
 						</div>
 					</div>
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" href="index.html"><span class="fa fa-instagram"></span></a>
+							<a class="social" href="https://www.instagram.com/?hl=fr"><span class="fa fa-instagram"></span></a>
 						</div>
 					</div>
 				</div>
