--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
 	<link rel="stylesheet" type="text/css" href="./css/font-awesome.css">
 	<link rel="stylesheet" type="text/css" href="./css/et-line.min.css">
 
-	<!--<script src="./js/jquery.touchSwipe.js" defer></script>
-	<script src="./js/gmaps.js" defer></script>-->
+	<script src="./js/jquery.touchSwipe.js" defer></script>
+	<script src="./js/gmaps.js" defer></script>
 	<script src="https://code.jquery.com/jquery-2.1.0.min.js" integrity="sha256-8oQ1OnzE2X9v4gpRVRMb1DWHoPHJilbur1LP9ykQ9H0=" crossorigin="anonymous" defer></script>
 	<!--<script src="./js/bootstrap.min.js" defer></script>-->
 	<script src="./js/blocs.js" defer></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js" defer></script>
 	
-    <title>La Chouette Agence</title>
+    <title>La Chouette Agence - Agence web Lyonnaise</title>
 
     
 <!-- Analytics -->
