--- a/page2.html
+++ b/page2.html
@@ -7,17 +7,15 @@
     <link rel="shortcut icon" type="image/png" href="favicon.jpg">
     
 	<link rel="stylesheet" type="text/css" href="style.css">
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
-	<!--<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css" defer>-->
+	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="./css/font-awesome.css">
 	<link rel="stylesheet" type="text/css" href="./css/et-line.min.css">
 
-	<script src="./js/jquery.touchSwipe.js" defer></script>
-	<script src="./js/gmaps.js" defer></script>
-	<script src="https://code.jquery.com/jquery-2.1.0.min.js" integrity="sha256-8oQ1OnzE2X9v4gpRVRMb1DWHoPHJilbur1LP9ykQ9H0=" crossorigin="anonymous" defer></script>
-	<!--<script src="./js/bootstrap.min.js" defer></script>-->
-	<script src="./js/blocs.js" defer></script>
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js" defer></script>
+	<script src="./js/jquery-2.1.0.js" defer></script>
+	<script src="./js/bootstrap.min.js" defer ></script>
+	<script src="./js/blocs.js" defer ></script>
+	<script src="./js/jqBootstrapValidation.js" defer ></script>
+	<script src="./js/formHandler.js" defer ></script>
     <title>La Chouette Agence - contact</title>
 
     
