--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 	<script src="./js/jquery-2.1.0.js" defer></script>
 	<script src="./js/bootstrap.min.js" defer ></script>
 	<script src="./js/blocs.js" defer ></script>
-	<script src="./js/jqBootstrapValidation.js" defer ></script>
-	<script src="./js/formHandler.js" defer ></script>
+	<script src="./js/jquery.touchSwipe.js" defer></script>
+	<!--<script src="./js/gmaps.js" defer></script>-->
 	
     <title>La Chouette Agence - Agence web Lyonnaise</title>
 
